rename package tuura-boolean

--- a/boolean.cabal
+++ b/boolean.cabal
@@ -1,4 +1,4 @@
-name:          boolean
+name:          tuura-boolean
 version:       0.0.1
 synopsis:      Boolean manipulation
 license:       BSD3
